--- a/_posts/2017-02-22-ssac.md
+++ b/_posts/2017-02-22-ssac.md
@@ -1,7 +1,8 @@
 ## MIT Sports Analytics Conference (2017) Research Paper Competition Finalist
 
-![alt text](/imgs/ABCD.jpg){: style="width:350;"}
-
+![Messi's Flow Motif Style Radar Graph](/imgs/messi.jpg){: style="width:300;"}
+<br /><sup>Messi's Flow Motif Style Radar Graph</sup>
+<br />
 Somewhere at the end of 2015 or start of 2016 I finally learned how to code using Python, 
 by building a webscraper (using [BeautifulSoup4](https://pypi.org/project/beautifulsoup4/)). This allowed me to scrape over 8000 matches worth of Opta event data from [Squawka](https://www.squawka.com).
 
@@ -20,4 +21,6 @@ We gather passing and possession data from 4 seasons (2012–15) of 6 big Europe
  We also make use of a novel way to represent the motif data (the radar graph) to make comparisons between players and teams across multiple seasons. 
  We show how this analysis can support scouting for players and managers, identifying unique players/teams, finding relationships between position and style and in finding a suitable replacement for FC Barcelona's Xavi.
  
- 
+![Positional Impact on Intensity and Frequency of Motif Use](/imgs/ABCD.jpg){: style="width:300;"}
+<br /><sup>Positional Impact on Intensity and Frequency of Motif Use</sup>
+<br />
