--- a/_posts/2017-02-22-ssac.md
+++ b/_posts/2017-02-22-ssac.md
@@ -21,6 +21,6 @@ We gather passing and possession data from 4 seasons (2012–15) of 6 big Europe
  We also make use of a novel way to represent the motif data (the radar graph) to make comparisons between players and teams across multiple seasons. 
  We show how this analysis can support scouting for players and managers, identifying unique players/teams, finding relationships between position and style and in finding a suitable replacement for FC Barcelona's Xavi.
  
-![Positional Impact on Intensity and Frequency of Motif Use](/imgs/ABCD.jpg){: style="width:300; float:center;"}
+![Positional Impact on Intensity and Frequency of Motif Use](/imgs/ABCD.jpg){:height="36px" width="36px"}
 <br /><sup>Positional Impact on Intensity and Frequency of Motif Use</sup>
 <br />
