--- a/_posts/2017-02-22-ssac.md
+++ b/_posts/2017-02-22-ssac.md
@@ -1,4 +1,4 @@
-## MIT Sports Analytics Conference (2017) Research Paper Competition Finalist
+## MIT Sloan Sports Analytics Conference Research Paper Competition
 
 ![Messi's Flow Motif Style Radar Graph](/imgs/messi.jpg){: style="width:300px; float:right;"}
 
