--- a/_posts/2017-07-10-pass-masp-v2.md
+++ b/_posts/2017-07-10-pass-masp-v2.md
@@ -4,9 +4,10 @@ Network analysis has been used to break down football matches for a couple of ye
 
 In 2012 [Peña and Touchette (pdf)](https://arxiv.org/pdf/1206.6904.pdf) showed that by using metrics such as [PageRank](https://en.wikipedia.org/wiki/PageRank), [Closeness](https://en.wikipedia.org/wiki/PageRank) and [Betweenness](https://en.wikipedia.org/wiki/PageRank) it is possible to identify important players within such network. Besides the use of mathematics they also showed a visual representation of what a passing network looks like (see Figure 1).
 
-<div style="clear: left;">    
-    <p style="float: right;"><img src="/imgs/pena.png" width="250"></p>
-    <figcaption>Figure 1: Passing Network of the Netherlands and Spain before the 2010 World Cup Final, by Peña & Touchette (2012)</figcaption>
+<div style="clear: right;">    
+    <p style="float: right;"><img src="/imgs/pena.png" width="325">
+        <figcaption>Figure 1: Passing Network of the Netherlands and Spain before the 2010 World Cup Final, by Peña & Touchette (2012)</figcaption>
+    </p>    
 </div>
 
 
