--- a/_posts/2017-07-10-pass-masp-v2.md
+++ b/_posts/2017-07-10-pass-masp-v2.md
@@ -6,7 +6,7 @@ In 2012 [Peña and Touchette (pdf)](https://arxiv.org/pdf/1206.6904.pdf) showed
 
 <div style="clear: right;">    
     <p style="float: right;"><img src="/imgs/pena.png" width="325">
-        <figcaption>Figure 1: Passing Network of the Netherlands and Spain before the 2010 World Cup Final, by Peña & Touchette (2012)</figcaption>
+        <figcaption style="float: right;">Figure 1: Passing Network of the Netherlands and Spain before the 2010 World Cup Final, by Peña & Touchette (2012)</figcaption>
     </p>    
 </div>
 
