--- a/_posts/2017-07-10-pass-masp-v2.md
+++ b/_posts/2017-07-10-pass-masp-v2.md
@@ -47,15 +47,13 @@ The new pass map for Real Madrid against Barcelona can be seen in Figure 5 (clic
     <p><img src="/imgs/pass_map_1.png" width="425"></p>  
 </figure>
 
-Below are some more examples of pass maps:
-
-
-
+#### Examples
 <figure>    
     <p><img src="/imgs/pass_map_a.png" width="425"></p>  
     <figcaption>Figure A: Ajax away versus Willem II
     </figcaption>  
 </figure>
+<br>
 
 
 <figure>    
@@ -63,47 +61,46 @@ Below are some more examples of pass maps:
     <figcaption>Figure B: Napoli at home versus Fiorentina
     </figcaption> 
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_c.png" width="425"></p>  
     <figcaption>Figure C: Bournemouth away versus Swansea City
     </figcaption> 
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_d.png" width="425"></p>  
     <figcaption>Figure D: Galatasaray away versus Gaziantepsor
     </figcaption> 
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_e.png" width="425"></p>  
     <figcaption>Figure E: RB Leipzig away versus Eintracht Frankfurt
     </figcaption> 
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_f.png" width="425"></p>  
     <figcaption>Figure F: Benfica away versus Rio Ave
     </figcaption> 
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_g.png" width="425"></p>
     <figcaption>Figure G: Nice away versus Guingamp
     </figcaption>   
 </figure>
-
+<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_h.png" width="425"></p>  
     <figcaption>Figure H: Huddersfield Town at home versus Reading
-
     </figcaption> 
 </figure>
-
+<br>
