--- a/_posts/2017-07-10-pass-masp-v2.md
+++ b/_posts/2017-07-10-pass-masp-v2.md
@@ -25,7 +25,7 @@ A couple years later these maps have evolved into pass maps such as those create
 
 I will not go into the details of all of them here since Jan Mullenberg already summed it up very nicely in his blog post appropriately named [The Sense and Nonesens of a Passmap](https://www.tussendelinies.nl/the-sense-and-nonsense-of-a-passmap/). The gist of this piece is that there are two main flaws, namely: passing direction as indicated by the arrows is not the true passing direction/average passing direction of that player, and secondly (the problem I will address in this blog) the average pass position shown can be very unreliable especially for players that change positions a lot. Mullenberg gives the following example:
 
-"at Real Madrid Ronaldo and Bale like to change positions every now and then. Bale plays during 90 minutes on both the left side and the right side of the field. By calculating his average position, you will get a position somewhere in the middle of the field. However, this is a misrepresentation of reality."
+<i>"at Real Madrid Ronaldo and Bale like to change positions every now and then. Bale plays during 90 minutes on both the left side and the right side of the field. By calculating his average position, you will get a position somewhere in the middle of the field. However, this is a misrepresentation of reality."</i>
 
 #### Pass Map 2.0
 
