--- a/_posts/2016-12-01-ssac.md
+++ b/_posts/2016-12-01-ssac.md
@@ -45,7 +45,7 @@ We analyze individual players as well as teams based on the diversity and freque
  We show how this analysis can support scouting for players and managers, identifying unique players/teams, finding relationships between position and style and in finding a suitable replacement for FC Barcelona's Xavi.
 
  <figure>    
-    <p><img src="/imgs/ABCD.png" width="400"></p>
+    <p><img src="/imgs/ABCD.jpg" width="400"></p>
     <figcaption> Figure 3. Positional Impact on Intensity and Frequency of Motif Use
     </figcaption>    
  </figure>
