styles blogs txt divs

--- a/_posts/2017-07-10-pass-maps-v2.md
+++ b/_posts/2017-07-10-pass-maps-v2.md
@@ -23,9 +23,9 @@ A couple years later these maps have evolved into pass maps such as those create
 </figure>
 
 
-I will not go into the details of all of them here since Jan Mullenberg already summed it up very nicely in his blog post appropriately named [The Sense and Nonesens of a Passmap](https://www.tussendelinies.nl/the-sense-and-nonsense-of-a-passmap/). The gist of this piece is that there are two main flaws, namely: passing direction as indicated by the arrows is not the true passing direction/average passing direction of that player, and secondly (the problem I will address in this blog) the average pass position shown can be very unreliable especially for players that change positions a lot. Mullenberg gives the following example:
+I will not go into the details of all of them here since Jan Mullenberg already summed it up very nicely in his blog post appropriately named [The Sense and Nonesense of a Passmap](https://www.tussendelinies.nl/the-sense-and-nonsense-of-a-passmap/). The gist of this piece is that there are two main flaws, namely: passing direction as indicated by the arrows is not the true passing direction/average passing direction of that player, and secondly (the problem I will address in this blog) the average pass position shown can be very unreliable especially for players that change positions a lot. Mullenberg gives the following example:
 
-<i>"at Real Madrid Ronaldo and Bale like to change positions every now and then. Bale plays during 90 minutes on both the left side and the right side of the field. By calculating his average position, you will get a position somewhere in the middle of the field. However, this is a misrepresentation of reality."</i>
+<div class="text-quote"> "...at Real Madrid Ronaldo and Bale like to change positions every now and then. Bale plays during 90 minutes on both the left side and the right side of the field. By calculating his average position, you will get a position somewhere in the middle of the field. However, this is a misrepresentation of reality."</div>
 
 #### Pass Map 2.0
 
@@ -53,54 +53,50 @@ The new pass map for Real Madrid against Barcelona can be seen in Figure 5 (clic
     <figcaption>Figure A: Ajax away versus Willem II
     </figcaption>  
 </figure>
-<br>
-
 
 <figure>    
     <p><img src="/imgs/pass_map_b.png" width="425"></p>  
     <figcaption>Figure B: Napoli at home versus Fiorentina
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
 
 <figure>    
     <p><img src="/imgs/pass_map_c.png" width="425"></p>  
     <figcaption>Figure C: Bournemouth away versus Swansea City
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
+
 
 <figure>    
     <p><img src="/imgs/pass_map_d.png" width="425"></p>  
     <figcaption>Figure D: Galatasaray away versus Gaziantepsor
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
+
 
 <figure>    
     <p><img src="/imgs/pass_map_e.png" width="425"></p>  
     <figcaption>Figure E: RB Leipzig away versus Eintracht Frankfurt
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
+
 
 <figure>    
     <p><img src="/imgs/pass_map_f.png" width="425"></p>  
     <figcaption>Figure F: Benfica away versus Rio Ave
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
+
 
 <figure>    
     <p><img src="/imgs/pass_map_g.png" width="425"></p>
     <figcaption>Figure G: Nice away versus Guingamp
     </figcaption>   
 </figure>
-<br>
+
 
 <figure>    
     <p><img src="/imgs/pass_map_h.png" width="425"></p>  
     <figcaption>Figure H: Huddersfield Town at home versus Reading
-    </figcaption> 
+    </figcaption>
 </figure>
-<br>
