--- a/_posts/2016-12-01-ssac.md
+++ b/_posts/2016-12-01-ssac.md
@@ -25,7 +25,7 @@ Possession Motifs (PMs): a sequence of at least 3 passes a team/player creates t
 In Figure 1 we see ABAB, BABC and ABCD respectively.
 
 <figure>    
-    <p><img src="/imgs/flow_motifs_.png" width="375"></p>
+    <p><img src="/imgs/flow_motifs_.png" width="375" class="center-img"></p>
     <figcaption>Figure 1. ABAB, BABC, ABCD Motifs
     </figcaption>    
 </figure>
@@ -35,7 +35,7 @@ Expected Goal Motifs (xGMs): a sequence of at least one pass that leads to a goa
  and to capture the level of goal-orientation each player/team has hidden in their passing motifs.
  In Figure 2 we see expected goal motif ABACG.
  <figure>    
-    <p><img src="/imgs/flow_motifs_2_.png" width="375"></p>
+    <p><img src="/imgs/flow_motifs_2_.png" width="375" class="center-img"></p>
     <figcaption> Figure 2. ABACG Expected Goal Motif
     </figcaption>    
 </figure>
@@ -45,7 +45,7 @@ We analyze individual players as well as teams based on the diversity and freque
  We show how this analysis can support scouting for players and managers, identifying unique players/teams, finding relationships between position and style and in finding a suitable replacement for FC Barcelona's Xavi.
 
  <figure>    
-    <p><img src="/imgs/ABCD.jpg" width="400"></p>
+    <p><img src="/imgs/ABCD.jpg" width="400" class="center-img"></p>
     <figcaption> Figure 3. Positional Impact on Intensity and Frequency of Motif Use
     </figcaption>    
  </figure>
