--- a/_posts/2017-07-10-pass-maps-v2.md
+++ b/_posts/2017-07-10-pass-maps-v2.md
@@ -6,7 +6,7 @@ In 2012 [Peña and Touchette (pdf)](https://arxiv.org/pdf/1206.6904.pdf) showed
 
 
 <figure>    
-    <p><img src="/imgs/pena.png" width="425" class="center-img"></p>
+    <p><img src="/imgs/pena.png" width="425" class="center-img-2"></p>
     <figcaption>Figure 1: Passing Network of NL v Spain before the 2010 World Cup Final, by Peña & Touchette (2012)
     </figcaption>    
 </figure>
@@ -17,7 +17,7 @@ Although this image gives a clear representation of the most utilized passing la
 A couple years later these maps have evolved into pass maps such as those created by 11tegen11 (see Figure 2). Although these maps already give a better indication of player location and pass intensity there are still some fundamental flaws that make these images difficult to interpret.
 
 <figure>    
-    <p><img src="/imgs/11v11.png" width="425" class="center-img"></p>
+    <p><img src="/imgs/11v11.png" width="425" class="center-img-2"></p>
     <figcaption>Figure 2: Positions and Passing Network of Chile versus Germany in the 2017 Confederations Cup Final by 11tegen11.
     </figcaption>    
 </figure>
