--- a/_posts/2016-12-01-ssac.md
+++ b/_posts/2016-12-01-ssac.md
@@ -1,11 +1,12 @@
 ## 🔬 MIT Sloan Sports Analytics Conference Research Paper Competition
 
+
+![Messi's Flow Motif Style Radar Graph](/imgs/messi.jpg){: style="width:35%; float:right;"}
+
 Somewhere at the end of 2015 or start of 2016 I finally learned how to code using Python,
 by building a webscraper (using [BeautifulSoup4](https://pypi.org/project/beautifulsoup4/)).
 This webscraper allowed me to scrape 4 seasons (2012–15/16) of Opta event data from [Squawka](https://www.squawka.com) spanning 6 big European leagues with 8219 matches,
 3532 unique players and 155 unique teams.
-
-![Messi's Flow Motif Style Radar Graph](/imgs/messi.jpg){: style="width:300px; float:right;"}
 
 In that same period I was in my first semester of the [Operations Management & Logistics](https://www.tue.nl/en/education/graduate-school/master-operations-management-and-logistics/) Master at the Eindhoven University of Technology.
 Were, during basically every different course, from Spare Parts Management to Linear Optimization and Game Theory I was theorizing about
