--- a/_posts/2016-12-01-ssac.md
+++ b/_posts/2016-12-01-ssac.md
@@ -13,7 +13,7 @@ Were, during basically every different course, from Spare Parts Management to Li
 how to apply all their unique methodologies to the beautiful game of football.
 
 Eventually this lead to me writing a research paper on [Network Motifs](https://en.wikipedia.org/wiki/Network_motif) in football passing networks called: [<b>Flow motifs in soccer: What can passing behavior tell us?</b>](https://content.iospress.com/download/journal-of-sports-analytics/jsa190290?id=journal-of-sports-analytics%2Fjsa190290)
- under the supervision of with [Dr. Shaunak Dabadgao](https://research.tue.nl/en/persons/shaunak-s-dabadghao/publications/), Assistant Professor at the Faculty of Industrial Engineering and Innovation Sciences.
+ under the supervision of [Dr. Shaunak Dabadgao](https://research.tue.nl/en/persons/shaunak-s-dabadghao/publications/), Assistant Professor at the Faculty of Industrial Engineering and Innovation Sciences.
 
 The research was accepted into the MIT Sports Analytics Conference in 2017 and published in the Journal of Quantitative Sports in 2019.
 
