--- a/_posts/2015-01-01-test.md
+++ b/_posts/2015-01-01-test.md
@@ -4,7 +4,7 @@
 $${\tau = r F \sin \theta}$$
 Where,
 r = the length [m] the arm of the force around an object
-F = the force vector, mass [kg] * acceleration [${m \over s^2}$]
+F = the force vector, mass [kg] * acceleration \(m \over s^2\)
 </body>
 
 <p>
