--- a/_posts/2015-01-01-test.md
+++ b/_posts/2015-01-01-test.md
@@ -1,13 +1,8 @@
 ## a
 
-<body>
-$${\tau = r F \sin \theta}$$
-Where,
-r = the length [m] the arm of the force around an object
-F = the force vector, mass [kg] * acceleration \(m \over s^2\)
-</body>
-
 <p>
-When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+$${\tau = r F \sin \theta}$$
+Where, <br>
+r = the length [\(m \)] the arm of the force around an object <br>
+F = the force vector, mass [\(kg \)] * acceleration \(m \over s^2\) <br>
 </p>
