--- a/_posts/2023-03-02-ssac23.md
+++ b/_posts/2023-03-02-ssac23.md
@@ -11,3 +11,7 @@ The purpose of this research is to build gender-specific, first-of-their-kind Gr
 More information on this research project can be found in the GitHub repository linked below.
 
 [![Readme Card](https://github-readme-stats.vercel.app/api/pin/?username=USSoccerFederation&repo=ussf_ssac_23_soccer_gnn&theme=dracula)](https://github.com/USSoccerFederation/ussf_ssac_23_soccer_gnn)
+
+Watch the presentation on YouTube below.
+
+[![Our Talk on YouTube](https://img.youtube.com/vi/3ozD-fvQmOg/0.jpg)](https://www.youtube.com/watch?v=3ozD-fvQmOg)
