--- a/_posts/2025-06-30-efpi.md
+++ b/_posts/2025-06-30-efpi.md
@@ -1,6 +1,6 @@
 ## 🌀 EFPI: Elastic Formation and Position Identification
 
-⚽ The newest release of the 𝒖𝒏𝒓𝒂𝒗𝒆𝒍𝒔𝒑𝒐𝒓𝒕𝒔 Python package (v1.1.0) now includes the functionality of my latest research paper titled: ["𝐸𝐹𝑃𝐼: 𝐸𝑙𝑎𝑠𝑡𝑖𝑐 𝐹𝑜𝑟𝑚𝑎𝑡𝑖𝑜𝑛 𝑎𝑛𝑑 𝑃𝑜𝑠𝑖𝑡𝑖𝑜𝑛 𝐼𝑑𝑒𝑛𝑡𝑖𝑓𝑖𝑐𝑎𝑡𝑖𝑜𝑛 𝑖𝑛 𝐹𝑜𝑜𝑡𝑏𝑎𝑙𝑙 (𝑆𝑜𝑐𝑐𝑒𝑟) 𝑢𝑠𝑖𝑛𝑔 𝑇𝑒𝑚𝑝𝑙𝑎𝑡𝑒 𝑀𝑎𝑡𝑐ℎ𝑖𝑛𝑔 𝑎𝑛𝑑 𝐿𝑖𝑛𝑒𝑎𝑟 𝐴𝑠𝑠𝑖𝑔𝑛𝑚𝑒𝑛𝑡".](https://arxiv.org/abs/2506.23843)
+The newest release of the 𝒖𝒏𝒓𝒂𝒗𝒆𝒍𝒔𝒑𝒐𝒓𝒕𝒔 Python package (v1.1.0) now includes the functionality of my latest research paper titled: ["𝐸𝐹𝑃𝐼: 𝐸𝑙𝑎𝑠𝑡𝑖𝑐 𝐹𝑜𝑟𝑚𝑎𝑡𝑖𝑜𝑛 𝑎𝑛𝑑 𝑃𝑜𝑠𝑖𝑡𝑖𝑜𝑛 𝐼𝑑𝑒𝑛𝑡𝑖𝑓𝑖𝑐𝑎𝑡𝑖𝑜𝑛 𝑖𝑛 𝐹𝑜𝑜𝑡𝑏𝑎𝑙𝑙 (𝑆𝑜𝑐𝑐𝑒𝑟) 𝑢𝑠𝑖𝑛𝑔 𝑇𝑒𝑚𝑝𝑙𝑎𝑡𝑒 𝑀𝑎𝑡𝑐ℎ𝑖𝑛𝑔 𝑎𝑛𝑑 𝐿𝑖𝑛𝑒𝑎𝑟 𝐴𝑠𝑠𝑖𝑔𝑛𝑚𝑒𝑛𝑡".](https://arxiv.org/abs/2506.23843)
 
 The aim of 𝐄𝐅𝐏𝐈 is to easily assign a formation and associated position labels to segments of tracking data. These segments can be individual frames of a full game, possessions, periods or any (custom) time interval you want (e.g. every 5 minutes). 𝐄𝐅𝐏𝐈 computes the cost a fitting a set of formation templates (from the 𝒎𝒑𝒍𝒔𝒐𝒄𝒄𝒆𝒓 library) to scaled player positions, it picks the formation template with the lowest assignment cost using linear sum assignment and allocates each player their position label. By releasing EFPI as open-source software, I hope to provide a solid solution for this rudimentary, and commonly needed task.
 
