--- a/_posts/2025-05-01-cdf.md
+++ b/_posts/2025-05-01-cdf.md
@@ -10,4 +10,4 @@ The research is ongoing, and we're committed to continuously improving the forma
 
 To support further integration I've developed a Python validation package for data providers who want to implement the format. This tool ensures outputs comply with the schemas defined in our research, making adoption straightforward and reliable.
 
-[![Readme Card](https://github-readme-stats.vercel.app/api/pin/?username=UnravelSports&repo=common-data-format-validator&theme=dracula)](https://github.com/UnravelSports/common-data-format-validator)
+[![Readme Card...](https://github-readme-stats.vercel.app/api/pin/?username=UnravelSports&repo=common-data-format-validator&theme=dracula)](https://github.com/UnravelSports/common-data-format-validator)
